--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: objective-c
-osx_image: xcode9.3
-#xcode_sdk: iphonesimulator11.3
-#xcode_project: LoopKit.xcodeproj
+osx_image: xcode10
 xcode_scheme:
     - LoopKit
     - LoopKitUI
 script:
-   - xcodebuild -project LoopKit.xcodeproj -scheme LoopKit build -destination 'name=iPhone X' test
-   - xcodebuild -project LoopKit.xcodeproj -scheme "LoopKit Example" build -destination 'name=iPhone X'
+   - xcodebuild -project LoopKit.xcodeproj -scheme LoopKit build -destination 'name=iPhone SE' test
+   - xcodebuild -project LoopKit.xcodeproj -scheme "LoopKit Example" build -destination 'name=iPhone SE'
